<resources>
    <string name="app_name">Dessert_Club_Application</string>

    <string name="heading_1">Share Your Dessert Love!</string>
    <string name="image_view">logo</string>
    <string name="home_button_1">Lets Eat!</string>
    <string name="login">Login</string>
    <string name="user_name_email">User Email</string>
    <string name="hint_username_email">User E-mail</string>
    <string name="user_password">User Password</string>
    <string name="hint_password">***************</string>
    <string name="forgot_password">Forogt Password?</string>
    <string name="login_button">Login</string>
    <string name="signup">SignUp</string>
    <string name="button_forogotpassword">Forgot Password?</string>


    <string name="welcome">Welcome</string>
    <string name="name"></string>
    <string name="email"></string>
    <string name="street"></string>
    <string name="city"></string>
    <string name="mobile"></string>
    <string name="password"></string>
    <string name="confirm_password"></string>
    <string name="hint_1">Name</string>
    <string name="hint_2">abc@gmail.com</string>
    <string name="hint_3">Street</string>
    <string name="hint_4">City</string>
    <string name="hint_5">07-12345678</string>
    <string name="hint_6">********</string>
    <string name="hint_7">********</string>
    <string name="button_confirm_register">Register</string>
    <string name="signUp_form_button">SignUp Form</string>


    <string name="forgot_password_Heading">Forgot Password?</string>
    <string name="text_email"></string>
    <string name="btn_forogot_update">Update Password</string>


    <string name="logo_image">logo</string>
    <string name="login_user_icon">user icon</string>
    <string name="myprofile">profile picture</string>
    <string name="myorders_images">myorders</string>
    <string name="btn_logout">Logout</string>
    <string name="image_promo">my promotions</string>
    <string name="Myprofile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="my_promos">My Promos</string>
    <string name="btn_menu">Menu</string>
    <string name="menu_heading1">What You Have To Eat!</string>
    <string name="image_cake">cake</string>
    <string name="cake">Cakes</string>
    <string name="pudding_image">pudding</string>
    <string name="my_inquiries">My Inquires</string>
    <string name="inquiry_image">inquiry image</string>



    <string name="string_CF"></string>
    <string name="string_OF"></string>
    <string name="string_CT"></string>
    <string name="string_OT"></string>
    <string name="btn_shopping_cart">Shopping Cart</string>
    <string name="invalid_name">Enter valid name</string>
    <string name="invalid_subject">Enter a valid subject</string>
    <string name="inquiry">Enter your inquiry</string>


    <string-array name="cake_flavors">
        <item>Flavor</item>
        <item>Chocolate</item>
        <item>Vanilla</item>
        <item>Coffee</item>
        <item>Cheese Cake</item>
        <item>Other</item>
    </string-array>

    <string-array name="cake_toppings">
        <item>Toppings</item>
        <item>Chocolate Ganache</item>
        <item>Cashew Nuts</item>
        <item>Strawberry</item>
        <item>Blueberry</item>
        <item>Other</item>
    </string-array>

    <string name="hint_other_flavour">Other flavor</string>
    <string name="other_flavor" />
    <string name="other_topping">Other Topping</string>
    <string name="other_top" />
    <string name="customized_cake">Customized Your Cake</string>
    <string name="btn_create_cc">Create</string>
    <string name="head1">Customized_Details</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>

    <string name="btn">Button</string>
    <string name="pudding_menu">PUDDING</string>
    <string name="cakes_menu">CAKE</string>
    <string name="icecream">ICE CREAM</string>
    <string name="mousse_menu">MOUSSE</string>

    <string name="caramelpudding">Caramel Pudding</string>
    <string name="biscuit">Biscuit Pudding</string>
    <string name="bread">Bread Pudding</string>
    <string name="rainbow">Rainbow Pudding</string>
    <string name="marshmello">Marshmello Pudding</string>
    <string name="watalappan">Watalappan</string>

    <string name="caramel_200">Rs.200</string>
    <string name="biscuit_price">Rs.150</string>
    <string name="bread_price">Rs.250</string>
    <string name="rainbow_price">Rs.200</string>
    <string name="marshmello_price">Rs.300</string>
    <string name="watalappan_price">Rs.125</string>
    <string name="add_caramel">ADD</string>
    <string name="add_biscuit">ADD</string>
    <string name="add_bread">ADD</string>
    <string name="add_rainbow">ADD</string>
    <string name="add_marshmello">ADD</string>
    <string name="add_watalappan">ADD</string>

    <string name="chocolate">Chocolate Cake</string>
    <string name="forest">Black Forest Cake</string>
    <string name="vanilla">Vanilla Cake</string>
    <string name="cheese">Cheese Cake</string>
    <string name="velvet">Red Velvet Cake</string>
    <string name="fudge">Chocolate Fudge Cake</string>
    <string name="chocolate_price">Rs.3000</string>
    <string name="add_chocolate">ADD</string>
    <string name="black_price">Rs.3200</string>
    <string name="add_black">ADD</string>
    <string name="vanilla_price">Rs.3300</string>
    <string name="add_vanilla">ADD</string>
    <string name="cheese_price">Rs.4000</string>
    <string name="add_cheese">ADD</string>
    <string name="velvet_price">Rs.3500</string>
    <string name="add_velvet">ADD</string>
    <string name="fudge_price">Rs.4000</string>
    <string name="add_fudge">ADD</string>

    <string name="blueberry">Blue Berry Ice Cream</string>
    <string name="butterscotch">Butterscotch Ice Cream</string>
    <string name="chocochip">Chocolate Chip Ice Cream</string>
    <string name="oreo">Oreo Ice Cream</string>
    <string name="mint">Mint Chocolate Ice Cream</string>

    <string name="choco_mousse">Chocolate Mousse</string>
    <string name="mousse_cake">Mousse Cake</string>
    <string name="lemon_mousse">Lemon Mousse</string>
    <string name="strawberry_mousse">Strawberry Mousse</string>
    <string name="berry_price">Rs.250</string>
    <string name="add_berry">ADD</string>
    <string name="butterscotch_price">Rs.225</string>
    <string name="add_butterscotch">ADD</string>
    <string name="chip_price">Rs.250</string>
    <string name="add_chip">ADD</string>
    <string name="oreo_price">Rs.350</string>
    <string name="add_oreo">ADD</string>
    <string name="mint_price">Rs.250</string>
    <string name="add_mint">ADD</string>
    <string name="cart_list">Cart List</string>
    <string name="orders">Orders</string>
    <string name="pudding_list">Pudding List</string>
    <string name="add_to_cart">Add To Cart</string>

    <string name="biscuitpudding">Biscuit Pudding</string>
    <string name="rupees250">Rs.250</string>
    <string name="rupees150">Rs.150</string>
    <string name="_1">×1</string>
    <string name="_2">×2</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="update1">UPDATE</string>
    <string name="delete1">DELETE</string>
    <string name="total">Total</string>
    <string name="rs_550">Rs.550</string>
    <string name="place_order">Place Order</string>


    <string name="txtPayment">Payment</string>
    <string name="txtAccept">We Accept</string>
    <string name="txtTotal">Total Amount</string>
    <string name="txtName">Name</string>
    <string name="txtAccount">Account Number</string>
    <string name="txtSecurity">Security Code</string>
    <string name="txtExpiry">Expiry Date</string>
    <string name="btnAdd">Add</string>
    <string name="btnEdit">Edit</string>
    <string name="btnDelete">Delete</string>
    <string name="btnConfirm">Confirm</string>
    <string name="btnView">View Data</string>
    <string name="btnRetrieve">View Data </string>
    <string name="txtPhone">Phone Number</string>
    <string name="txtDelivery">Delivery</string>
    <string name="txtSuccess">Payment Successfully</string>
    <string name="btnContinue">Continue</string>
    <string name="txtStreet">Street</string>
    <string name="txtCity">City</string>
    <string name="txtAddAddress">Add Delivery Address</string>
    <string name="txtProvince">Province</string>
    <string name="btnPConfirm">Confirm</string>

</resources>