<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg24_blur"
    tools:context=".user_register">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/purple"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/name_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/tienne"
        android:hint="@string/hint_1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/name_register"
        android:text="@string/name"
        android:textColor="@color/black_1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/tienne"
        android:hint="@string/hint_2"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:labelFor="@id/email_register"
        android:text="@string/email"
        android:textColor="@color/black_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_register"
        app:layout_constraintVertical_bias="0.027" />

    <EditText
        android:id="@+id/street_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/tienne"
        android:hint="@string/hint_3"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:labelFor="@id/street_register"
        android:text="@string/street"
        android:textColor="@color/black_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_register"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/city_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/tienne"
        android:hint="@string/hint_4"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textColor="@color/black_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street_register"
        app:layout_constraintVertical_bias="0.045"
        tools:text="@string/city" />

    <EditText
        android:id="@+id/phone_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/tienne"
        android:hint="@string/hint_5"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:text="@string/mobile"
        android:textColor="@color/black_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_register"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/hint_6"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:labelFor="@id/password_register"
        android:text=""
        android:textColor="@color/black_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_register"
        app:layout_constraintVertical_bias="0.075" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/hint_7"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/black_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_register"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/button_confirm_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tienne_black"
        android:text="@string/button_confirm_register"
        android:textSize="18sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
        app:layout_constraintVertical_bias="0.306" />

</androidx.constraintlayout.widget.ConstraintLayout>