<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg25"
    tools:context=".home_page">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="164dp"
        android:contentDescription="@string/logo_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/capture_removebg_preview" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="133dp"
        android:layout_height="149dp"
        android:contentDescription="@string/login_user_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005"
        app:srcCompat="@drawable/login_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_myprofile"
        android:layout_width="90dp"
        android:layout_height="172dp"
        android:contentDescription="@string/myprofile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.098"
        app:srcCompat="@drawable/profile1_crop" />

    <ImageView
        android:id="@+id/image_myorders"
        android:layout_width="90dp"
        android:layout_height="172dp"
        android:contentDescription="@string/myorders_images"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/image_myprofile"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.066"
        app:srcCompat="@drawable/order" />

    <ImageView
        android:id="@+id/iamge_mypromos"
        android:layout_width="90dp"
        android:layout_height="172dp"
        android:contentDescription="@string/image_promo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toEndOf="@+id/image_myorders"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.054"
        app:srcCompat="@drawable/promo" />

    <TextView
        android:id="@+id/text_myprofile"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Myprofile"
        android:textColor="#FB8C00"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image_myorders"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_myprofile"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_myorders"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_orders"
        android:textColor="#D8326F"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toEndOf="@+id/text_myprofile"
        app:layout_constraintTop_toBottomOf="@+id/image_myorders"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_promos"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_promos"
        android:textColor="@color/pink_1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toEndOf="@+id/text_myorders"
        app:layout_constraintTop_toBottomOf="@+id/iamge_mypromos"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/button_menu_page"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:fontFamily="sans-serif"
        android:text="@string/btn_menu"
        android:textColor="@color/black_1"
        android:textSize="18sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_myorders"
        app:layout_constraintVertical_bias="0.235" />

    <Button
        android:id="@+id/button_logut"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/btn_logout"
        android:textColor="@color/black_1"
        android:textSize="18sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_menu_page"
        app:layout_constraintVertical_bias="0.238" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="172dp"
        android:contentDescription="@string/inquiry_image"
        app:layout_constraintBottom_toTopOf="@+id/button_menu_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toEndOf="@+id/iamge_mypromos"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.18"
        app:srcCompat="@drawable/inquiry_icon_removebg_preview" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="@string/my_inquiries"
        android:textColor="#E33E0A"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_menu_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toEndOf="@+id/text_promos"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_shopping_cart"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:fontFamily="sans-serif"
        android:text="@string/btn_shopping_cart"
        android:textColor="@color/black_1"
        android:textSize="18sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toEndOf="@+id/button_menu_page"
        app:layout_constraintTop_toBottomOf="@+id/text_promos"
        app:layout_constraintVertical_bias="0.218" />



</androidx.constraintlayout.widget.ConstraintLayout>