<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg15"
    tools:context=".customized_cake">

    <TextView
        android:id="@+id/text_cus_cake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customized_cake"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <Spinner
        android:id="@+id/spinner_flavours"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/cake_flavors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_cus_cake"
        app:layout_constraintVertical_bias="0.148" />

    <EditText
        android:id="@+id/other_flavours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_other_flavour"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/other_flavor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_flavours"
        app:layout_constraintVertical_bias="0.089" />

    <Spinner
        android:id="@+id/spinner_topping"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/cake_toppings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_flavours"
        app:layout_constraintVertical_bias="0.114" />

    <EditText
        android:id="@+id/other_topping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/other_topping"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/other_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_topping"
        app:layout_constraintVertical_bias="0.161" />

    <Button
        android:id="@+id/button_creat_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_cc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_topping" />
</androidx.constraintlayout.widget.ConstraintLayout>