<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg27"
    tools:context=".forgotPassword">

    <TextView
        android:id="@+id/forgot_password_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_Heading"
        android:textColor="@color/teal_700"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <EditText
        android:id="@+id/userEmail_forogot"
        android:layout_width="366dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/user_name_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:labelFor="@id/userEmail_forogot"
        android:text="@string/text_email"
        android:textColor="@color/black_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_heading"
        app:layout_constraintVertical_bias="0.243" />

    <Button
        android:id="@+id/button_forogt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_forogot_update"
        android:textSize="18sp"
        app:backgroundTint="#023731"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmail_forogot"
        app:layout_constraintVertical_bias="0.209" />

</androidx.constraintlayout.widget.ConstraintLayout>